--- a/sNTM_beamer.tex
+++ b/sNTM_beamer.tex
@@ -39,7 +39,7 @@ Equation (\ref{eq:tm}) equals to the following form:
 \label{eq:nnv_tm}
 p(w|d)=\phi(w) \theta^T(d)
 \end{equation}
-, where \(phi(w)\) is the row vector \textbf{word-topic distribution} \([p(w|t_1), \cdots, p(w|t_K)]\), and \(\theta(d)\) is the row vector \textbf{topic-document distribution} \([p(t_1|d), \cdots, p(t_K|d)]\).
+, where \(\phi(w)\) is the row vector \textbf{word-topic distribution} \([p(w|t_1), \cdots, p(w|t_K)]\), and \(\theta(d)\) is the row vector \textbf{topic-document distribution} \([p(t_1|d), \cdots, p(t_K|d)]\).
 
 \end{frame}
 
@@ -58,6 +58,11 @@ In equation (\ref{eq:nnv_tm}), the distributions \(\phi(w)\) and \(\theta(d)\) h
 
 %------------------------------
 %page 4
+\begin{frame}
+\frametitle{Neural Topic Model (NTM)}	
+Symbols:
+
+\end{frame}
 
 
 
